src/objects/Special_Price_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <description>Address of the account on the Opportunity.  Auto-populated when the user comes into the approval.  Used in the HE Special Pricing Approval process.</description>
        <label>Account Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Hyperlink to the account on the Opportunity. Auto-populated when the user comes into the approval. Used in the HE Special Pricing Approval process.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.Account.Id,  Opportunity__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Numbers__c</fullName>
        <description>Account Number(s) of all Stores serving students at this campus. A comprehensive list can be found in Desktop OASIS.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>Account Number(s) of all Stores serving students at this campus. A comprehensive list can be found in Desktop OASIS.</inlineHelpText>
        <label>Account Number(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Approver_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Approver Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Department_Information__c</fullName>
        <label>Additional Department Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Factors__c</fullName>
        <description>Describes any additional factors that should be considered for this approval.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>Describe any additional factors that should be considered for this approval</inlineHelpText>
        <label>Additional Factors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_Start_Date__c</fullName>
        <description>Start date of the course related to the opportunity.  Auto-populated when the user comes into the approval.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>Projected course start dates as defined by institution or department</inlineHelpText>
        <label>Class Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitive_Titles__c</fullName>
        <description>List of Competitive books/packages that exist with other publishers.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>List of Competitive books/packages that exist with other publishers - please include as much information as possible</inlineHelpText>
        <label>Competitive Titles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Enrollment__c</fullName>
        <description>Enrollment for the course in the current period. Auto-populated when the user comes into the approval. Used in the HE Special Pricing Approval process.</description>
        <formula>IF(CONTAINS(TEXT(Opportunity__r.Selling_Period__c) , &quot;Fall&quot;) ,  Opportunity__r.Fall__c, IF(CONTAINS(TEXT(Opportunity__r.Selling_Period__c) , &quot;Spring&quot;) ,   Opportunity__r.Spring__c , IF(CONTAINS(TEXT(Opportunity__r.Selling_Period__c) , &quot;Summer&quot;) ,  Opportunity__r.Summer__c , IF(CONTAINS(TEXT(Opportunity__r.Selling_Period__c) , &quot;Winter&quot;) , Opportunity__r.Winter__c,0 ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the course related to the Opportunity.  Auto-populated when the user comes into the approval.  Used in the HE Special Pricing Approval process.</description>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Special Price Requests</relationshipLabel>
        <relationshipName>Special_Price_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Comments__c</fullName>
        <label>Customer Service Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>District_Managers_Email__c</fullName>
        <description>Email of the reps district manager. Manually entered by the Sales Rep. Used in the HE Special Pricing Approval process.</description>
        <formula>District_Managers_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Managers_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the reps district manager.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <label>District Manager&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Price_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Manager_Information__c</fullName>
        <label>General Manager Information</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the reps general manager.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <label>General Manager&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Price_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Managers_Email__c</fullName>
        <description>Email of the reps general manager. Manually entered by the Sales Rep. Used in the HE Special Pricing Approval process.</description>
        <formula>General_Manager_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Renewal__c</fullName>
        <description>Describes if the product has been previously requested.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>Has this product been previously requested?</inlineHelpText>
        <label>Is this a Renewal?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LTS_Email__c</fullName>
        <description>Email of the LTS rep. Manually entered by the Sales Rep. Used in the HE Special Pricing Approval process.</description>
        <formula>LTS_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTS Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the LTS rep. Manually entered by the Sales Rep. Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>This field reflects an Opportunity Team Member identified with role = &quot;LTS&quot;.  If not pre-polulated, please manually select the LTS team member.</inlineHelpText>
        <label>LTS Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Price_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_Finance_Information__c</fullName>
        <label>Line of Business Finance Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_Information__c</fullName>
        <label>Line of Business Finance Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Special Price Requests</relationshipLabel>
        <relationshipName>Special_Price_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pearson_Account_Number__c</fullName>
        <description>Pearson Account number from the account on the opportunity. Automatically calculated when the request is craeted. Used in the HE Special Pricing Approval process.</description>
        <formula>Opportunity__r.Account.Pearson_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pearson Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pearson_Counter_Offer__c</fullName>
        <description>Describes Pearson counter-offer that would gain or retain the business.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>Describe Pearson counter-offer that would gain or retain the business</inlineHelpText>
        <label>Pearson Counter-Offer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Special_Price_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Special Price Request that was approved on a previous opportunity associated with the same account</description>
        <inlineHelpText>Search a previous Special Price Request by inserting the Special Price Request Name in this field. This should be in the format &quot;SPR-XXXXXXX.&quot; To find this, navigate to the previous year&apos;s opportunity; special price request will be listed there.</inlineHelpText>
        <label>Previous Special Price Request</label>
        <referenceTo>Special_Price_Request__c</referenceTo>
        <relationshipLabel>Special Price Requests</relationshipLabel>
        <relationshipName>Special_Price_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <description>Hyperlink to the the primary selling account of the account on the Opportunity. Auto-populated when the user comes into the approval. Used in the HE Special Pricing Approval process.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Opportunity__r.Account.Primary_Selling_Account__r.Id ,  Opportunity__r.Account.Primary_Selling_Account__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Managers_Email__c</fullName>
        <description>Email of the reps regional manager. Manually entered by the Sales Rep. Used in the HE Special Pricing Approval process.</description>
        <formula>Regional_Managers_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Managers_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the reps regionalmanager.  Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <label>Regional Manager&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Price_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of request the sale rep is creating. Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Valuepack with MyLab / Mastering Access Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valuepack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyLab/Mastering Access Code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Representative_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Representative Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Representative_Phone_Number__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales_Representative Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socrates_Account_Number__c</fullName>
        <formula>Opportunity__r.Account.Socrates_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Socrates Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Price_Coordinator_Information__c</fullName>
        <label>Special Price Coordinator Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Group_Information__c</fullName>
        <label>Special Pricing Group Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM approved/ validating data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to special pricing team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Pricing Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supporting_Information__c</fullName>
        <description>Describe the actions and sales tactics the sales rep tried prior to resorting to Special pricing.Manually entered by the Sales Rep.  Used in the HE Special Pricing Approval process.</description>
        <inlineHelpText>Describe the actions and sales tactics you tried prior to resorting to Special pricing.</inlineHelpText>
        <label>Supporting Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Number__c</fullName>
        <description>Territory number of the sales rep. Auto-populated when the user comes into the approval from the user record. Used in the HE Special Pricing Approval process.</description>
        <formula>CreatedBy.Charge_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuepack_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valuepack Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>included_the_Account_Numbers_for_every_S__c</fullName>
        <description>Identifier if the user has included the Account Numbers for every School Store at that School.</description>
        <inlineHelpText>For Legal reason, every college bookstore that services this particular school(both on-campus and off-campus stores, must receive the same Special Price.  Select &quot;Yes&quot; if Account Numbers for every School Store have been included.</inlineHelpText>
        <label>Included all the Account Numbers?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Special Price Request</label>
    <nameField>
        <displayFormat>SPR-{0000000}</displayFormat>
        <label>Special Price Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Price Requests</pluralLabel>
    <recordTypes>
        <fullName>Special_Price_Request</fullName>
        <active>true</active>
        <label>Special Price Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>